update power and transport
Former-commit-id: a1f7131eba6a6f2948b5024f08ef1ec3dde7986b

--- a/_includes/machines/machinesPower.html
+++ b/_includes/machines/machinesPower.html
@@ -3,35 +3,17 @@
 		<div class="outerDiv">
 			<div class="innerDiv">
 				<h1>Power Infrastructure</h1>
-				<p>Four power sources make sense on the Moon, three of which are variants on solar power. There's photovoltaic solar cells directly changing sunlight into electricity. That makes the most sense at the lunar poles, where there are places with sun most of the time. There's solar thermal power, where the heat of the sun is used to drive turbines or Stirling engines. That makes sense when it can be combined with other processes for producing materials, such as for glass production. A good design at large scale can continue to produce power at a pretty steady level all through the night, that is the purpose of the STePP units. There's space-based solar power, where photovoltaics are placed in orbits that keep them in sunlight all the time, and then that power is beamed as microwaves to the surface. This is an excellent approach once there is a bit more infrastructure, and is the largest source of power on the Moon in the long term. Then there is nuclear power. Nuclear reactors are the most versatile and reliable power source and therefore always have a place. 
+				<p>Four power sources make sense on the Moon, three of which are variants on solar power. There's photovoltaic solar cells directly changing sunlight into electricity. That makes the most sense at the lunar poles, where there are places with sun most of the time. There's solar thermal power, where the heat of the sun is used to drive turbines or Stirling engines. That makes sense when it can be combined with other processes for producing materials, such as for glass production. A good design at large scale can continue to produce power at a pretty steady level all through the night, that is the purpose of the STeMP units. There's space-based solar power, where photovoltaics are placed in orbits that keep them in sunlight all the time, and then that power is beamed as microwaves to the surface. This is an excellent approach once there is a bit more infrastructure, and is the largest source of power on the Moon for some time. Then there is nuclear power. Nuclear reactors are the most versatile and reliable power source and therefore always have a place.
 				</p>
-				<p>
-					Unless you go back to plans from the 70s, reference to
-					nuclear power has completely disappeared from proposals
-					for the Moon. This is unfortunate, as nuclear power is
-					constant day and night, small modular plants are extremely
-					simple to deploy, and safety is quite easy. At the poles,
-					sunlight is nearly constant on certain mountain peaks,
-					making solar power a good alternative to nuclear.
-					Anywhere else,
-					to set up a settlement you need nuclear power. Nuclear is
-					a really good idea on the Moon. Here, it is used while
-					the initial colony at Lalande, Cernan's Promise, gets
-					going.
+				<p>Anywhere where there is new development far from existing infrastructure, there is a logical order in which to deploy the different power sources. Power from the reactors of the nuclear shuttles can be had immediately upon landing anywhere, day or night. A shuttle can also be fitted with a solar wing module if it is taking machinery out during the day. That powers machinery while initial setup is done. A solar panel and nuclear mix is also the best option after the shuttle leaves. The solar panels provide many times more watts per kilogram of their mass than a mobile nuclear reactor, but the reactor will power things through the night. (There are currently no power storage options that will provide consistent power for two weeks of night and have decent durability without massing more than a mobile reactor.) For best productivity in that configuration, activities that draw less power are best organized to happen during darkness. Once there are enough skyhooks set up with extensive solar power wings, part way through Phase 2, the next thing is to erect a rectenna unit that receives power beamed from those panels as microwaves. Rectennas are simple and light, that's pretty fast to do even though they are large. Finally, much later, Stirling generators can be connected to the units producing molten rock in bulk for construction and industry.
 				</p>
-				<p>
-					Later on, once Cernan's Promise has developed the
-					infrastructure, it can start extracting thorium from
-					minerals in and around the crater and produce nuclear
-					fuel on-site instead of importing it from Earth. But
-					that wouldn't really be for power plants - it would be
-					for nuclear rockets. Unless technology like Mach drives
-					manages to produce high-thrust engines based on completely
-					new science, nuclear engines will continue to be the
-					best transport option between the surface of a celestial
-					body and orbit. (Unless you've managed to build a space
-					elevator... and not if the body has an atmosphere and
-					someone lives there... there are a few wrinkles.)
-				</p>
-{% include_relative _includes/machines/machinesPowerSolarThermal.html %}
-{% include_relative _includes/machines/machinesPowerNuclear.html %}
+			</div>
+		</div>
+	</section>
+</div>
+
+{% include_relative _includes/machines/power/SolarThermal.html %}
+{% include_relative _includes/machines/power/Nuclear.html %}
+{% include_relative _includes/machines/power/SolarPV.html %}
+{% include_relative _includes/machines/power/SpaceSolar.html%}
+{% include_relative _includes/machines/power/flywheels.html %}
