--- a/_includes/machines/power/SolarThermal.html
+++ b/_includes/machines/power/SolarThermal.html
@@ -7,7 +7,7 @@
 				</p>
 				<p>Chemicals that boil off the lava are collected for use elsewhere. These are chemicals such as oxides of phosphorus, potassium, and sulfur, and minute amounts of hydrogen, carbon, and nitrogen. The plant is sized with extra capacity so that some molten rock can be drawn off and used to produce things like glass and basalt fiber materials. That lava needs to be processed further in most such cases.
 				</p>
-				<p>Some of the components for STeMP units are simple and can be produced on-site early in colony development - mirrors, the tanks, pipes. With 3d printing of parts out of sintered metal powder and casting of molten minerals, most of the radiators, pumps, and generators can also be made.
+				<p>Some of the components for STeMP units are simple and can be produced on-site early in colony development - mirrors, tanks, pipes, reflective heat barriers. With 3d printing of parts out of sintered metal powder and casting of molten minerals, most of the radiators, pumps, and generators can also be made.
 				</p>
 			</div>
 		</div>
