mining content update
Former-commit-id: 5dbb47fccc7dc748baad7f97d595fec1b070bde5

--- a/_includes/machines/mining/Refining.html
+++ b/_includes/machines/mining/Refining.html
@@ -16,7 +16,7 @@
           The east wall of Lalande Crater is probably highlands material in parts. If you get to the bedrock in that area you might find dunite, or digging in the nearby hills might uncover that. Dunite is at least 90% olivine. Doing the above process with that feedstock would have much better yield - really, you would be removing 'impurities' of aluminium, calcium, and traces of other stuff.
         </p>
         <p>
-          Once you have pure olivine, you melt it and centrifuge it again. This time you are separating the two minerals that make up olivine: forsterite (which is Mg<sub>2</sub>SiO<sub>2</sub> from fayalite (Mg<sub>2</sub>SiO<sub>2</sub>). The fayalite will melt first, when the stone is again above 1200&deg;C. The magnesium silicate will remain crystalline, and as it is less dense, in the centrifuge it will gather in the middle of the disk while the iron silicate is concentrated at the edge. It could be from a third to a half of the mix. Cool the mould again so everything is solid, pop out the stone, and cut the iron silicate away from the magnesium silicate.
+          Once you have pure olivine, you melt it and centrifuge it again. This time you are separating the two minerals that make up olivine: forsterite (which is Mg<sub>2</sub>SiO<sub>2</sub> from fayalite (Fe<sub>2</sub>SiO<sub>2</sub>). The fayalite will melt first, when the stone is again above 1200&deg;C. The magnesium silicate will remain crystalline, and as it is less dense, in the centrifuge it will gather in the middle of the disk while the iron silicate is concentrated at the edge. It could be from a third to a half of the mix. Cool the mould again so everything is solid, pop out the stone, and cut the iron silicate away from the magnesium silicate.
         </p>
         <p>
           So, why do this... Well, it all depends on how well the fayalite reacts with hydrogen.
@@ -29,35 +29,10 @@
 		</div>
 	</section>
 	<aside>
-		<figure class="sideDiv">
-			<img src="img/dustroasterSchematic.jpg" alt="Schematic of a dust roaster">
-			<figcaption>All the parts of a dust roaster, from a
-				<a href="http://enu.kz/repository/2010/AIAA-2010-8703.pdf">paper</a> presented
-				at the AIAA space conference in 2010.
-			</figcaption>
-		</figure>
-		<div class="sideDiv">
-			A patent for the dust roaster:
-			<a href="http://www.google.com.mx/patents/US7935176">'Oxygen extraction apparatus and
-			process'</a>, patent US 7935176 B2
-		</div>
-    <div class="sideDiv">
-      A second patent on the dust roaster: <a href="https://google.com/patents/US20050199797">'Isotope separation process and apparatus therefor'</a>
-    </div>
+
 	</aside>
 </div>
-<section class="frameContainer" id="Dustroaster">
- <div class="framePairTop">
-		<div class="framewrap frame16x9">
-						<iframe src="DustRoaster.html" frameborder="0" allowfullscreen
-						mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-						</iframe>
-	 </div>
- </div>
- <div class="framePairBottom">
-The model notes go through each stage of processing. Production was estimated in <a href="http://enu.kz/repository/2010/AIAA-2010-8703.pdf">the AIAA paper</a> to be 20 metric tons of silicon per year. If the efficiency for other metals is similar, that means about 10 tons of aluminum, 8 tons of iron, and a ton or so of titanium, considering the average proportion of metals in the regolith of the maria. Output of a desired metal can be increased by selecting better feedstock or pre-processing it with other methods before putting it in the dust roaster. The paper postulated power needs of about 200 kW. If processing targets one or more specific metals, power needs could go up or down.
-</div>
-</section>
+
 <section class="frameContainer" id="IlmeniteReactor">
 	<div class="framePairTop">
 		<div class="framewrap frame16x9">
