--- a/_includes/timeline/ph4-trans.html
+++ b/_includes/timeline/ph4-trans.html
@@ -481,7 +481,7 @@
         <p>The space stations are moved to orbits just in front of and behind Anshar, where shuttles can very easily hop between them and the skyhook.
         </p>
     </details>
-    <details>
+    <details id="electricRunways">
       <summary><h5>Electric Runways, and Rejigging the Lunar Skyhooks</h5></summary>
       <p>As shipping volumes increase, and construction at scale becomes widespread, new shuttles are scaled down from the size of recent generations. They are for a fixed system that launches them at a high cadence. They can still haul up to 60 tons, but their engines are smaller, and no longer nuclear. They have enough thrust to overcome lunar gravity, with a thrust-to-weight ratio of around 1.5 when fully loaded. When they launch to Gagarin, they lift off from a runway that accelerates them up to the needed speed and throws them off the end in an arc that peaks just above the altitude of Gagarin's foot platform. Their engines fire only to do the maneuvering for matching vector and speed with the platform. During normal operation, the launch is so precise their engines barely fire at all as they come in and dock. On return, their engines brake their descent, and the runway brakes their horizontal motion.
       </p>
