--- a/_includes/machines/machinesMining.html
+++ b/_includes/machines/machinesMining.html
@@ -2,11 +2,23 @@
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
-				<h1>Extraction: Mining and Refining Elements and Compounds</h1>
-				<p>
-					The Moon has a marked tendency to either have lots of something, or none at all of something. Once we are able to really dig around there is reason to hope we will find some stuff there is no sign of on the surface. For the first years, it is prudent to assume what you have to work with is only what has been proven to be there. </p>
-				<p>
-					That list is adequate for a lot of things, but some ingenuity will be required to turn it into all we need for survival. Every way we process ore must be reinvented to suit the Moon. The chemicals most used in batch reactions to refine out certain products - acids and bases - are entirely absent from the Moon. If water and other volatiles were extracted from the poles in sufficient quantity, some of those chemicals could be made. That will take time and the resulting resources will be precious for much longer. The more water and nitrogen and carbon chemicals you use in materials processing, the less you have for farming and living spaces. It will likely be a long time before volatile mining can satisfy all local demands. Chemical catalysts can be imported from Earth and carefully recycled, but a bit will be lost in each batch and more will need to be imported regularly. Ways to use plentiful local resources to reduce reliance on these chemicals are important. </p>
+				<h1>Extraction: from Ore to Product</h1>
+				<p>The Moon has a marked tendency to either have lots of something, or none at all of something. Once we are able to really dig around there is reason to hope we will find some stuff there is no sign of on the surface. For the first years, it is prudent to assume what you have to work with is only what has been proven to be there.
+				</p>
+				<p>That list is adequate for a lot of things, but some ingenuity will be required to turn it into all we need for survival. Every way we process ore must be reinvented to suit the Moon. The chemicals most used in batch reactions to refine out certain products are entirely absent from the Moon. If water and other volatiles extracted from the poles (such as carbon dioxide and ammonia) are used in chemical processing, that reduces the amount available for a range of other essential uses - fuel, life support and ecosystem development, and as ingredients of important materials. Production sufficient to satisfy local needs will take time, and they will remain precious for much longer. If alternate practices can be developed that reduce the need to use them in refining and chemicals production, supply can go to uses where there is no substitute.
+				</p>
+				<p>When chemicals are used on Earth to produce a specific product chemical in a batch reaction, other product(s) of the reaction are often allowed to dissipate or are thrown away because they have no value - substances like water and carbon dioxide. This would never be the case on the Moon, everything has to be collected and recycled as much as possible. If that is done efficiently, there are many cases where it would likely be preferable to periodically restock a key reactant from Earth than to use an alternative process that is more demanding.
+				</p>
+				<p> On the other hand, many reactions only happen above a certain temperature, or happen faster or differently above a certain temperature. A reactor that operates at very high temperatures reduces the need for reactants or allows a commonly available reactant (such as oxygen) to be used in place of an imported one (such as fluorine). Because the sun is strong and constant and heat dissipates slowly in a vacuum, high-temperature reactors are an attractive option for many things. The materials needed are expensive, but the resulting reactor lasts a long time.
+				</p>
+				<p>As the timeline progresses, some elements become much more plentiful. Not only is water mined in large volumes from the lunar poles, but also from asteroids brought into orbit. Later it is also mined from Ceres and Callisto. Processes that rely on water, or on hydrogen purified out of water, are more attractive as time progresses. This is also true of reactions involving carbon. Carbon chemicals will be mined from asteroids, and later come in from multiple other worlds more cheaply than it can be delivered from Earth. If carbon, hydrogen, or water can be very efficiently recycled and reused, it becomes worthwhile to use it, to a limited degree in Phase 2 and then much more in Phase 3 and beyond.
+				</p>
+				<p>Then there are techniques that produce chemicals using energy alone. In its simplest form, this can be simply a furnace that concentrates sunlight enough to melt a charge of regolith, which is then cooled and spun in a centrifuge so that certain minerals separate out. This is useful for production of glass. A step up from that, such a furnace that operates at a higher temperature can boil away a charge of regolith, and chilled collector plates can be positioned or inserted at the right time so that the deposits that build up on them are primarily of one metal oxide. More complex again, electrolysis done in a charge of molten regolith produces pure metals and oxygen that bubbles off. An alternative that produces similar results is the Schubert dust roaster, an approach too novel to summarize. Each approach has its pros and cons.
+				</p>
+				<p>Just as it would usually be preferable to build reactor vessels that operate at higher temperatures so they consume less reactant or use one that is more common, a furnace that uses purely sun to produce useful products is usually preferable to using any chemical reaction at all. This becomes more true as infrastructure accumulates allowing furnaces to be larger, and made more from local materials or materials that at least don't come from Earth. As the timeline progresses, the energy supply on the Moon also becomes bigger and bigger. Because most of the energy supply is derived from plentiful and reliable sunlight, the advantage of energy-based approaches increases with time. Even at the beginning of settlement, approaches that use chemical reactions can compete only where the reactants are plentiful, are nearly completely recycled, and use simpler, cheaper vessels and less energy. 
+				</p>
+				<p>An example of each of these approaches is examined following the chart.
+				</p>
 			</div>
 		</div>
 	</section>
@@ -46,9 +58,24 @@
 	</section>
 
 </div>
+<div class="container" id="solarFurnace">
+	{% include_relative _includes/machines/mining/solarFurnace.html%}
+</div>
+<div class="container" id="fluidizedBed">
+	{% include_relative _includes/machines/mining/fluidizedBed.html%}
+</div>
+<div class="container" id="carbothermal">
+	{% include_relative _includes/machines/mining/carbothermal.html%}
+</div>
+<div class="container" id="moltenElectrolysis">
+	{% include_relative _includes/machines/mining/moltenElectrolysis.html%}
+</div>
+<div class="container" id="dustRoaster">
+	{% include_relative _includes/machines/mining/dustRoaster.html%}
+</div>
 <div class="container" id="Refining">
    {% include_relative _includes/machines/mining/Refining.html %}
-
 </div>
 <div class="container" id="Excavation">
+	{% include_relative _includes/machines/mining/Excavation.html%}
 </div>
