--- a/sass/404css.sass
+++ b/sass/404css.sass
@@ -1,14 +1,13 @@
 html
   color: rgb(255,200,0)
-  display: table
-  font-family: sans-serif
   height: 100%
-  text-align: center
   width: 100%
 
 body
-  background-color: #000000
-  display: table-cell
+  background-color: black
+
+p, h1
+  text-align: center
   vertical-align: middle
   margin: 2em auto
 
@@ -18,8 +17,7 @@ h1
   font-weight: 400
 
 p
-  margin: 0 auto
-  width: 280px
+  margin: 4px auto
 
 @media only screen and (max-width: 280px)
   body,p
