new material for machines2.html
Former-commit-id: 47516556cf8a3209750f125acc8e998a811e9084

--- a/_includes/timeline/ph1-ships.html
+++ b/_includes/timeline/ph1-ships.html
@@ -1,6 +1,6 @@
 <div class="columnSet" id="ph1-ships">
   <div class="spanAll">
-    <h2>Phase 1 - duration 15 years</h2>
+    <h2>Phase 1 - Year 0 to Year 15</h2>
   </div>
 </div>
 <div class="columnSet">
