--- a/_includes/timeline/ph1-summary.html
+++ b/_includes/timeline/ph1-summary.html
@@ -20,7 +20,7 @@
 </div>
 <div class="columnSet" id="skyhookHabsRP">
 <div class="spanAll">
-  <h2>Phase 2 - duration 10 years. Residence Program Round 1.</h2>
+  <h2>Phase 2 - Year 16 to Year 25. Residence Program Round 1.</h2>
 </div>
 
 </div>
