--- a/_includes/machines/mining/moltenElectrolysis.html
+++ b/_includes/machines/mining/moltenElectrolysis.html
@@ -2,18 +2,30 @@
   <div class="outerDiv" >
     <div class="innerDiv">
       <h3>Molten Regolith Electrolysis (MRE)</h3>
-      <p>Molten regolith is conductive enough for electrolysis to work in it without anything more being added. As electric current passes through the melt, the stream of electrons cause molecular bonds to break, producing ions. The oxygen ions are attracted to the positive charge of the anode, and the metal ions are attracted to the negative charge of the cathode. By placing the anode at the top of the melt chamber, the oxygen can be drawn off of the top of the mix, and with the cathode at the bottom, the molten metals can be drained from the bottom.
+      <p>Molten regolith is conductive enough for electrolysis to work in it without anything more being added. As electric current passes through the melt, the stream of electrons cause molecular bonds to break, producing ions. The oxygen ions are attracted to the positive charge of the anode, and the metal ions are attracted to the negative charge of the cathode. By placing the anode at the top of the melt chamber, the oxygen can be drawn off of the top of the melt, and with the cathode at the bottom, the molten metals can be drained from the bottom.
      </p>
      <p>Current designs contain the melt in a chamber that is larger than the melt pool created when current is passed through it. A crust of solidified lava is allowed to form by the walls of the chamber, reducing the amount of heat the chamber itself must withstand. When operating, the electrolysis melts only a ball of regolith at the center of the chamber. To add fresh regolith, a hole must be punched through the crust.
      </p>
-     <p>The device produces a metal puddle that is an alloy of all the metals present in the regolith. Further processing would be needed to purify them into single elements or adjust the alloy in other ways. Once the process is rolling almost all the current used leads directly to the oxygen and metal products. The overall efficiency of the process depends on how much energy is required to turn the highly mixed alloy into useful alloys and pure metals. If this depends on the use of reactants that must be imported from Earth, that is also a big strike against it. Possibly seiving, selection of feedstock for a favorable mineral blend, and pre-processing to remove some metals (notably iron), could reduce this issue enough that MRE outcompetes its rival, the Schubert dust roaster discussed in the next section.
+     <p>The device produces a metal puddle that is an alloy of all the metals present in the regolith, including several that are very difficult to purify in other ways - titanium, magnesium, aluminium. Further processing would be needed to purify them into single elements or or divide some metals from others to create useful alloys. Once the process is rolling almost all the current used leads directly to the oxygen and metal products. However, the overall efficiency of the process depends on how much energy is required to turn the highly mixed alloy into useful alloys and pure metals. If this depends on the use of reactants that must be imported from Earth, that is also a big strike against it. Possibly seiving, selection of feedstock for a favorable mineral blend, and pre-processing to remove some metals (notably iron), could reduce this issue enough that MRE outcompetes its rival, the Schubert dust roaster discussed in the next section.
      </p>
-     <p>One disadvantage of this system is that the only really effective substance the anode can be made of is iridium. The price of iridium has often been above $1000/oz in recent years. If the anode is any other substance, even an alloy of iridium with some other metal (tungsten has been tried), the anode degrades much faster and will have to be replaced so much sooner you might as well just make it out of iridium.
+     <p>One disadvantage of this system is that the only really effective substance the anode can be made of is iridium. The price of iridium has often been above $1000/oz in recent years. If the anode is any other substance, it combines with the oxygen ions in the melt and disintegrates in short order. Even an alloy of iridium with some other metal (tungsten has been tried) will have to be replaced so much sooner you might as well just use pure iridium.
      </p>
      <p>As it happens, iridium is a platinum group metal and is typically present in metal asteroids at levels that would qualify as high-grade ore on Earth. Metal asteroids are also rather common. Once mining of asteroids is well underway, possibly it would be cheaper to get iridium from them, than from Earth.
     </div>
   </div>
 </section>
 <aside>
-
+  <figure class="sideDiv">
+    <img src="img/MRE-in-Lab.jpg" alt="Lab setup of an MRE reactor">
+    <figcaption>An MRE reactor at laboratory scale being tested, from <a href="https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20130012066.pdf">Oxygen and Metals Processing on the Moon</a>, by Sibille and Sadoway. This slideshow overviews in-situ resource utilization, showing equipment plans for the Constellation program for regolith processing, and lab tests of MRE.
+    </figcaption>
+  </figure>
+  <figure class="sideDiv">
+    <img src="img/MRE-Schematic.jpg" alt="Schematic of an MRE reactor">
+    <figcaption>A schematic of how an MRE reactor could work, from <a href="https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20090018064.pdf">Production of Oxygen from Lunar Regolith using Molten Oxide Electrolysis</a> by Sibille, Sadoway, et al.. This focusses on how such a reactor needs to be.
+    </figcaption>
+  </figure>
+  <div class="sideDiv">
+    <a href="https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20150016088.pdf">A Parametric Sizing Model for Molten Regolith Electrolysis Reactors to Produce Oxygen from Lunar Regolith</a>, by Schreiner, Dominguez, and Sibille. This goes over the background of ISRU and MRE, has a whole bunch of relevant papers linked, and examines all the important considerations in design of an MRE reactor.
+  </div>
 </aside>
