--- a/_includes/machines/mining/solarFurnace.html
+++ b/_includes/machines/mining/solarFurnace.html
@@ -2,11 +2,20 @@
   <div class="outerDiv" >
     <div class="innerDiv">
       <h3>Solar Furnace</h3>
-      <p>
+      <p>A vessel loaded with regolith and rock that is heated by the sun can be quite simple and work at a low temperature, or quite complex and work at a high temperature.</p>
+      <p>Regolith heated to 1000&deg;C releases most of the volatile elements present in tiny quantities in it. This temperature is low enough that many materials can easily withstand it. A simple parabolic mirror could be used to concentrate sunlight, that is then bounced and refocused a couple of times to send it through the window of a vessel filled with regolith. That vessel could rotate like the drum of a cement mixer to spread the heat through the drum's contents by mixing. Thus the whole mass can be brought up to the desired temperature without significant hotspots and without the intense sun ever touching the drum's walls. The proportion of the regolith that would be released as vapors over this process would in total be only about 0.1% of its mass. This is easily pumped off during the process. It is only a kilogram of material for each metric ton, and usually more than half of that would be sulfur. The equipment needed to do this together masses enough that this would be a net gain after less than 1000 tons are processed - the chemicals acquired would mass more than the equipment needed to acquire it, which is mostly light, simple, and durable. The frames to support all the parts can be manufactured locally early in the timeline. Local manufacture of mirrors is also an early priority.
+     </p>
+     <p>Regolith melts to a thin liquid by the time it is 1200&deg;C. However, much of the contents of that liquid are tiny crystals, which are suspended in the liquid matrix. If you spin this lava in a centrifuge, the crystals will settle out. It shouldn't take spinning equivalent to very many gravities to make that happen in a timely manner. Then the liquid portion (which must still be near 1200&deg;C) needs to be poured off or drawn off. The solid portion remaining will be olivine, which is composed of oxides of magnesium, iron, and silicon. The liquid will be oxides of aluminum, calcium, titanium, and sodium, mixed with the remaining leftover silicon dioxide and a small amount of other substances. Each substance will have impurities of the other, it would require experimentation to see how pure a result this technique can yield.
+     </p>
+     <p>This sort of separation is known to happen on Earth in magma chambers (see sidebar). If this approach was experimented with to see if other types of separation can be done this way, more such techniques might be found. Though the results might not be very pure, it could still yield minerals with desirable properties. For instance, production of transparent glass in bulk could be made much easier by development of this technique, as discussed under Glass Production.
      </p>
     </div>
   </div>
 </section>
 <aside>
-
+  <figure class="sideDiv">
+    <img src="img/volatileContent.jpg" alt="volatile elements in regolith at ppm levels - hydrogen, carbon, nitrogen, sulfur, fluorine, clorine, helium, and neon. Argon, krypton, and xenon are present at parts per billion levels." title="volatile elements in regolith at ppm levels - hydrogen, carbon, nitrogen, sulfur, fluorine, clorine, helium, and neon. Argon, krypton, and xenon are present at parts per billion levels.">
+    <figcaption>From <a href="http://www.uapress.arizona.edu/onlinebks/ResourcesNearEarthSpace/resources15.pdf">Lunar Volatiles: Implications for Lunar Resource Utilization</a> by Bruce Fegley. The 'estimated inventory' column is an estimate of the content of each element in the top 3 meters of the regolith. As the document itself notes, these are extremely rough estimates.
+    </figcaption>
+  </figure>
 </aside>
