--- a/_includes/timeline/ph1-ships.html
+++ b/_includes/timeline/ph1-ships.html
@@ -5,7 +5,7 @@
 </div>
 <div class="columnSet">
   <article class="column" id="FirstTransportShips">
-  <details>
+  <details id="earthEquatorialSpaceStation">
     <summary><h5 style="display: inline">Construction of the Earth Equatorial Space Station</h5></summary>
     <p>Because of the scale and nature of the work that happens on this station, it is built in an equatorial orbit. These orbits never pass through the South Atlantic Anomaly, so the radiation exposure of people on the station is a fraction of what crews on the ISS get. This architecture has been extensively explored by <a href="http://alglobus.net/">Al Globus et al.</a>. The station is the proving grounds for tele-operated robotic construction. Successful development of that and cost savings from reusable launch vehicles allows creation of a space station on a much grander scale than the current International Space Station. Progress in AI, tele-robotics, and in-situ lunar resource processing allow later materials to be obtained from the Moon.</p>
     <details>
