ids for details
Former-commit-id: 118667aa716db4595fd57af5c7a2fa8d68ef1036

--- a/_includes/machines/mining/solarFurnace.html
+++ b/_includes/machines/mining/solarFurnace.html
@@ -18,4 +18,9 @@
     <figcaption>From <a href="http://www.uapress.arizona.edu/onlinebks/ResourcesNearEarthSpace/resources15.pdf">Lunar Volatiles: Implications for Lunar Resource Utilization</a> by Bruce Fegley. The 'estimated inventory' column is an estimate of the content of each element in the top 3 meters of the regolith. As the document itself notes, these are extremely rough estimates.
     </figcaption>
   </figure>
+  <figure class="sideDiv">
+
+    <figcaption>
+    </figcaption>
+  </figure>
 </aside>
