--- a/_includes/timeline/ph3-dev.html
+++ b/_includes/timeline/ph3-dev.html
@@ -7,7 +7,7 @@
     <p>This capacity speeds up development in space dramatically. It's why so many things get done during this phase, and later phases are exponentially more active again. Factories are built that manufacture entire vehicles and robots almost by themselves, staffed with robotic machinery. The raw materials that are used in those factories arrive from other factories that are almost as automated. As long as the robots operate in a predictable environment, they can do almost anything. By the end of Phase 3 many items and pieces of equipment are made completely of lunar materials, by lunar machines. Only very sophisticated and delicate machines come from Earth, such as computers and view screens.</p>
   </details>
   <details>
-    <summary><h5>Cernan's Promise</h5></summary>
+    <summary><h5 id="cernansPromise">Cernan's Promise</h5></summary>
     <p>The colony built on the eastern rim of Lalande Crater will house 1600 people by the end of this phase. Plans for a town for 50,000 people, surrounded by the factories that form the core of lunar industry, have been carefully drawn up and are methodically executed even as industry ramps up. The residents participate in construction of the factories and the town, but mostly that is handled by robots on their own. People focus on research, design, and planning of industries for Cernan's Promise. As soon as possible, the first factories at CP begin building modules and equipment for spacecraft, space stations, robots, satellites, and tether facilities.</p>
     <details>
       <summary>Construction of Initial Habs, Factories, Hangars, and Mines</summary>
