--- a/_includes/timeline/timelineIntros.html
+++ b/_includes/timeline/timelineIntros.html
@@ -1,7 +1,7 @@
 <div class="columnSet">
- <article class="column" id='TransportIntro'>
+ <article class="column">
   <h1>Transport Systems</h1>
-  <details>
+  <details id='TransportIntro'>
   <summary>The key to success</summary>
    <p>
     Europeans colonized the world thanks to their great sailing ships. Railroads were vital to expansion across the North American continent. Almost any level of investment is justified if it secures you access long-term to a large enough place. When that new place is the rest of the solar system? Bet the bank on it.
@@ -11,9 +11,9 @@
    </p>
   </details>
  </article>
- <article class="column" id="ColonyDevIntro">
+ <article class="column" >
   <h1>Colony Development</h1>
-  <details>
+  <details id="ColonyDevIntro">
    <summary>Go big, go robotic</summary>
    <p>
     Our position is it doesn't make sense to undertake construction or any industrial process on the Moon unless it can be done by robots that are operated remotely, or that operate themselves. It will be difficult to get this right at first, but once achieved then the slow, grinding, linear growth of projects in space up to now - is gone. In its place is a growth curve steeper than anything we have ever known. So to contemplate the workings of such a system, you might as well model it on the Moon, where there are no immediate and rather alarming questions about the resulting unemployment, or environmental impact, or power shifts, or anything like that. The reason this timeline forecasts such dramatic growth is because the robots make a world of difference. Advances along these lines have been impressive recently. This is a future we have to expect. </p>
@@ -21,9 +21,9 @@
    </p>
   </details>
  </article>
- <article class="column" id="SocioEconomicIntro">
+ <article class="column" >
   <h1>Socio-Economic Development</h1>
-  <details>
+  <details id="SocioEconomicIntro">
    <summary>A bridge to a new era</summary>
    <p>Everything here is predicated on the idea that a group of nations decide together to colonize the Moon and devote the funds necessary to do so properly without question. So, let the model be that the first missions are funded and carried out jointly by the nations with well-established space agencies - the United States, Russia, the European Union, China, India, Japan, and Canada. Once the Residence Program (explained below) begins, all nations participate.
    </p>
