ids phase 1 details
Former-commit-id: 8a7a4bf043466895ee9242412abecbbb4bf02df5

--- a/_includes/timeline/ph1-robots.html
+++ b/_includes/timeline/ph1-robots.html
@@ -1,5 +1,5 @@
-<article class="column" id="RobotRoverTests">
-  <details>
+<article class="column">
+  <details id="RobotRoverTests">
   <summary><h5><a href="machines.html#robots">Robot </a>and Rover Mission</h5></summary>
 <p>Each of the 2 LNCs delivers equipment to the base site on the west rim of Hinshelwood crater, near the north pole, each returning once to the Pod Ship to land it all. They land 80 tons of robots, equipment, and supplies, and enough water for the hydrolysis pod to produce the fuel needed for them to make it back to orbit. The robots are tele-operated from Earth at first. That work is around the clock, but because there is a transmission delay of about 3 seconds, work is slow and tedious, and the kinds of activities that are possible is limited. Once Crossroads has a crew, they start taking over the remote operation. More things can then be accomplished, and faster. Some operation is still done from Earth.</p>
 <details>
@@ -19,12 +19,12 @@
   </ul>
 </details>
 </details>
-<details>
+<details id="crewSortie">
   <summary><h5>Crew Sortie Mission and Robot Expansion</h5></summary>
   <p>An initial hab for crew sorties that looks a lot like a Quonset hut (based on upcoming design by Benaroya et al.) is delivered and set up prior to the arrival of a crew of 4 that stays for 2 weeks. The LNCs deliver a further 100 tons of materials and supplies in  support of the crew and accompanying mission goals. </p>
   <p>Their work makes the robots about as agile and precise as people. They test and deploy the new equipment that arrived before their mission. Much of that equipment is prototype water mining robots. By the time they leave, the robots on the base are as capable as a permanent crew of around 30 people. They are assisted in their work by the crew on Crossroads Station, who operate the robots as the crew on the surface direct.</p>
 
-<details>
+<details id="crewAugment">
   <summary>How the Crews Augment the Robots</summary>
   <ul>
   <li>They set up infrastructure that enhances the precision of the robots dramatically: rails, grids of sensors and signals, monitoring cameras. These are placed with precision the robots were not capable of.</li>
@@ -35,11 +35,11 @@
   </ul>
 </details>
 </details>
-<details>
+<details id="firstHab">
 <summary><h5>Construction of <a href="https://moonwards.com/colonies.html#PolarFirstHab">First Hab</a> at the Polar Base</h5></summary>
 <p>This habitat is the first instance of the robots doing <a href="https://www.moonwards.com/machines.html#building">truly complex work</a>. It isn't possible until the crew on Crossroads is able to control them finely, and count on them to execute a lot of complex behaviour with little to no direction (such as maintaining their balance, picking things up, throwing and catching things).</p>
 <p>It also requires excavating a cube 30 m on a side, and mass production of simple construction materials with consistent quality (though that quality doesn't have to be high). The outer walls and the internal floors and walls are made with local materials. Furnishings and utensils are also locally made (shelves, tables, doors, chairs, beds, dishware, hand tools).</p>
-<details>
+<details id="fhConstruction">
   <summary>Construction Process</summary>
   <ul>
   <li>In-situ cast-in-place and melt-in-place techniques are sufficient to supply rods, boards, panels, blocks, and beams. Joining and sealing is done by adding molten regolith or melting things together, so uniformity is unimportant. Inconsistent strength is compensated for by using more material. The stakes, which are higher quality, anchor everything to the surrounding hardpan regolith. </li>
@@ -55,7 +55,7 @@
 <p>If assistance from the crew at Crossroads is required, they can fly in for a week at a time and stay in the hab. The aim would be very much to avoid that, perhaps there might be one or two such trips. Once the robots have finished construction, a crew flies in to confirm it is all sound. The hab's systems would already have been checked remotely, and the structure pressurized, but the crew does a thorough check on-site. </p>
 <p>With the all-clear given, the hab is stocked and its first crew of 40 people is flown in.</p>
 </details>
-<details>
+<details id="waterProd">
 <summary><h5>Water Production</h5></summary>
 <p>Once a successful approach to ice mining is found, 200 tons of equipment is brought in to do just that. Initial caution to preserve the permanently shadowed regions for research is abandoned in Hinshelwood Crater and Hermite A Crater. They become ice mines. This opens the possibility of using techniques that are much more disruptive, but get ever more efficient with scale. One possibility is covering a large area with a strong membrane and sealing it to the ground, putting a heater in the center of it, and pumping off any gases released by the heat.
 </p>
