--- a/_includes/timeline/ph1-ISA.html
+++ b/_includes/timeline/ph1-ISA.html
@@ -1,7 +1,7 @@
 
 
-  <article class="column" id="InternationalSpaceAgency">
-    <details>
+  <article class="column" >
+    <details id="InternationalSpaceAgency">
     <summary><h5>Creation of the International Space Agency</h5></summary>
     <p>The agencies of most of the major space-faring nations cooperated in the construction of the International Space Station: ESA, JAXA, Roscosmos, NASA, and CSA. This is the best precedent but is a minor collaboration compared to what would be involved in settling the Moon.</p>
     <p>So the ISA is created and has its own staff, taken from all the member agencies. The founders are the United States, Russia, China, the European Union, India, Japan, and Canada. The agency creates the overall plan and parcels out the work on it. As the United States remains the country with the largest space industry and the most launch facilities, it is headquartered in Florida not far from Kennedy Space Center. </p>
