--- a/_includes/timeline/ph1-summary.html
+++ b/_includes/timeline/ph1-summary.html
@@ -1,6 +1,6 @@
 <div class="columnSet">
 <div class="spanAll">
-  <details>
+  <details id="ph1status">
   <summary>Status by the end of this phase:</summary>
   <ul>
   <li>the Pod ships have made around 100 trips to lunar orbit, most of them carrying crew for Crossroads.</li>
