--- a/_includes/timeline/ph2-longHab.html
+++ b/_includes/timeline/ph2-longHab.html
@@ -1,10 +1,10 @@
-<article class="column" id="InukshukLongHab">
-<details>
+<article class="column">
+<details id="InukshukLongHab">
  <summary><h5>Long Hab</h5></summary>
  <p>Long Hab is a long, deep habitat with a vaulted roof. Like all habs in this mission architecture, it has plenty of natural light and big outdoor views. Its views are achieved with mirrors and lenses, so that radiation is kept low and the structural challenges of large windows are avoided. </p>
  <p>Enough equipment, crew, and knowledge have built up for Long Hab to be a big step up from First Hab. It is 200 m long, 30 m wide, with variable depth of 30 to 50 m from the floor to where the walls meet the roof, and the vaulted ceiling is 15 m high. </p>
  <p>Tele-operation of the robots building Long Hab is done by the crew of First Hab with support by the crew of Crossroads. Little tele-operation is done from Earth for construction. It is also uncommon for astronauts to work outside on construction, instead they do most things remotely through the robots. When they go out, they put pressurized cabs on the rovers and wear only flight suits, not proper space suits. Space suits are very restrictive, uncomfortable, and clumsy, they are used only when necessary (and occasionally just to go for a walk outside).</p>
- <details>
+ <details >
    <summary>Construction Process</summary>
    <ul>
  <li>In-situ construction materials and techniques have developed enough that nothing structural is brought from Earth for Long Hab, and even some systems installations are made of local materials.</li>
