--- a/_includes/timeline/ph2-skyhooks.html
+++ b/_includes/timeline/ph2-skyhooks.html
@@ -1,13 +1,13 @@
 <div class="columnSet">
- <article class="column" id="MoreSkyhooks">
-  <details>
+ <article class="column" >
+  <details id="Gagarin">
      <summary><h5>Gagarin <a href="machines2.html#TetherTransport">Skyhook</a> and Anchor Station</h5></summary>
      <p>This process is a repeat of building Crossroads, except much faster, and much bigger. At least, Gagarin is set up from the outset to grow into the future shipyard, full orbital colony, and manufacturing center it will later be. The superstructure delivered from the EESS is much larger, as is its wing of solar panels. The deployment of the cables, cars, and all its parts goes faster the second time around. The LNCs on the surface begin sending up full loads of regolith, rock, and water that add anchoring mass to the station, as soon as the lower tether is close to its full length. No pressurized sections are added yet to Gagarin. Activity there is entirely conducted by robots controlled from Inukshuk and Crossroads.
      </p>
      <p>Because it is in an equatorial orbit, ships can launch from it or dock with it at any time of the month (Crossroads is only properly aligned for that twice a month). Another important new feature of Gagarin is that its upper tether extends to 17500 km above the lunar surface. At that altitude, the outward velocity imparted to a vessel hanging on to it is enough to fling it all the way to Venus, or Mars. All that has to be done is to detach from the cable at the right moment.</p>
      <h5>Expansion of Crossroads Skyhook</h5>
      <p>The solar array wing of Crossroads is greatly expanded, in preparation for beaming of power  to Lalande Crater for upcoming construction (which Gagarin also will do). The Station is upgraded and expanded to accommodate a crew of 50 who stay for terms of 1 to 5 years. It gets a centrifuge so that they can do so without risk to their health.</p>
-     <details>
+     <details id="GagCrossOps">
        <summary>Gagarin and Crossroads Operations</summary>
        <ul>
          <li>Some materials sent up from the surface now are actual structures fabricated at the colony. Their materials are fairly crude, but they are sturdy because weight doesn't really matter - making the anchor heavy is part of the goal. Thus they are strong enough to do their jobs. Pressure vessels, tanks, and trusses are sent up and added to the stations.</li>
@@ -16,28 +16,28 @@
       </ul>
     </details>
   </details>
-<details>
+<details id="FleetExpand1">
   <summary><h5>Lunar Fleet Expansion</h5></summary>
   <p>The Pod ship and LNC fleet is expanded to support construction of Gagarin and Sagan skyhooks, and greatly increased sortie missions. Four Pod ships ply the route to the Moon, 2 meeting Crossroads and 2 going to the equator to build Gagarin, and then Sagan. These two then do Gagarin's transport runs. They are larger - they can break Earth orbit carrying 250 tons. The LNC fleet increases to six. Four LNCs support Inukshuk, including sortie missions to other parts of the Moon and delivering fuel to the two LNCs working on what will be Gagarin Skyhook. Those two LNCs are larger, capable of flying 60 ton payloads to the foot of Gagarin once it is commissioned. One of the Inukshuk LNCs is fitted with a dome-shaped radiation shield around its nuclear engines, so that human crews can use it for sorties without excessive radiation exposure.</p>
   <p>A new class of ship is also created - Hopper ships. These ships transfer cargo between skyhooks, avoiding the inefficiency of sending something down a tether to a LNC, which than takes it to the destination tether, whose climber takes it up to that station. Hoppers instead climb a little up the upper tether of their skyhook and let go, so that at the top of the arc of their orbit, they can do the plane change that puts them on course to rendezvous with the anchor station of the destination skyhook, or a waystation platform part way along the upper tether. They use ordinary hydrolox engines, like the Pod ships, and can transfer up to 5 tons this way. They aren't capable of landing on the Moon's surface. </p>
   <p>The Fetch ships also make their debut in the Lunar Fleet, but they deserve their own section</p>
 </details>
-<details>
+<details id="fetcherDay">
   <summary><h5>Day of the Asteroid Fetchers</h5></summary>
     <p>The hunt for near-Earth asteroids (NEAs) is on, using the 3 Fetcher spacecraft maintained at the ready, berthed at waystations on Gagarin's upper tether. They are sent along the upper tethers and released at the altitude and moment that puts them on the best available trajectory to whatever opportune NEA is detected. The speed and trajectory imparted on release leave these craft with more fuel available for pushing the asteroid into a trajectory back to lunar orbit. They have <a href="https://en.wikipedia.org/wiki/Variable_Specific_Impulse_Magnetoplasma_Rocket">VASIMR engines</a> powered by solar panels and fueled by hydrogen. Their fuel tanks are filled just before launch from larger cryogenic tanks set up at the waystations. These storage tanks are well-sheltered from solar heat by cones of specialized multi-layer insulation and have their own cryogenic chilling mechanisms to reduce losses due to boil-off.</p>
     <p>The craft use the <a href="https://www.youtube.com/watch?v=PKli3zIDFoM">SHEPHERD</a> approach of <a href="http://www.digitalspace.com/papers/SHEPHERD/Jenniskens-Damer-et-al-SHEPHERDspace20140024.pdf">enveloping the NEA</a>. In this method, a giant open bag is positioned around the asteroid and then its end is drawn closed. The bag is filled with a thin atmosphere of xenon gas. The asteroid's spin and tumble stirs this gas. The turbulence this produces slowly dissipates the energy of that motion, until the asteroid comes to a halt. In this way, the many asteroids that are very fragile don't disintegrate. They are returned in their original state, allowing us to study their structure. The bags on these Fetchers can surround an object up to 20 m across. If the trajectory of the NEA is fortuitous, the Fetchers can return an asteroid of up to 3 kilotons.</p>
-    <details>
+    <details id="how2catchAst">
       <summary>How to Catch an Asteroid</summary>
     <p>Gagarin's tip platform is equipped with telescopes specialized to search for just such targets, which are largely unknown objects detected only when they are very close. Two such telescopes slung under the platform, on bases that isolate them from its motions, scan the sky constantly for tiny, dim NEAs. They identify targets automatically, compute their parameters, and send in the information to the anchor station. By the time a human is alerted, the station's computers have plotted a rendezvous trajectory and possibly even a Fetcher ship is being prepped. It is possible with such tiny objects that the window of opportunity is soon and brief. Even with the optimized telescopes, a good target might become visible only hours before its closest approach - especially the dark ones bearing one to two percent precious carbon. The crew only has to approve the launch, and a Fetcher will take off by itself and do the rest.</p>
     <p>Once caught and marshalled, the Fetcher slowly pushes the asteroid into a high lunar or Earth orbit. Once in orbit, a Pod ship hauls it in the rest of the way and berths it at Sagan Skyhook. This saves a lot of time, as low-thrust engines like the VASIMRs can only spiral in towards a world very slowly.</p>
     <p>Done with that trip, the Hoppers ferry the Fetchers back to Gagarin, and they take up their station again. Once we get the hang of this, the Fetchers are upgraded for even bigger catches.</p>
     </details>
-    <details>
+    <details id="firstAst">
       <summary>First Captured Asteroids</summary>
         <p>By the end of this phase, there are 10 asteroids berthed at Sagan Station. 6 are carbonaceous, 3 are stony, and one is metal. The total mass returned is 20 kilotons. </p>
     </details>
   </details>
-<details>
+<details id="sagan">
   <summary><h5>Sagan Skyhook and Telescope</h5></summary>
   <p>The third skyhook is not for shipping things to space. Its main purpose is research. It has two major research projects. First, when Pod ships come in with a bagged asteroid, they gently pull into the anchor station, which has specialized berths for just this situation. Here, the asteroid can be studied over time in detail without other station operations getting in the way, as they likely would on the busy stations at Crossroads and Gagarin. Sagan has berths for 20 asteroids of up to 50 m across. </p>
   <p> This easy-going situation for collected asteroids won't last, though. Once an asteroid has been thoroughly studied, unless it is very special indeed, it gets mined. A few fragments and lots of samples are preserved for ongoing study, and history. Of the minded material, what doesn't go down the tether is sent by the Hoppers to Gagarin for the shipyard and factories. Eventually, when Gagarin is more mature, it will make more sense to ship asteroids directly to Gagarin. Then Sagan's asteroid docks will be converted for other research purposes best done on an isolated, specialized station.</p>
@@ -45,16 +45,16 @@
   <p> Incidentally, Sagan is also around so that LNCs hitching a ride can get to any given spot on the Moon once a week, instead of once every two weeks. Its foot platform can grapple and hold hitchhiking LNCs, but cargo doesn't go up its tether, only down. So its climber car is stripped down as it needs much less power. It can lower 40 tons but can lift only 1 ton, which it does on solar power and energy stored from the descent in batteries. No power is beamed along the tether, its maintenance carts get around on power from their own solar panels, and work at a leisurely pace.
 </details>
 
-<details>
+<details id="expandEESS">
 <summary><h5>Expansion of the EESS</h5></summary>
 <p>A second, larger spinning section is added to the EESS, this time made mostly of lunar materials, including some structural elements. It looks sort of like a spinning top. Engineering of equipment for the Moon is now done mostly on the EESS, in a ring section open to vacuum extending from the first torus, spinning at lunar gravity levels, parts of it carpeted with a layer of genuine lunar regolith to imitate the Moon's surface. The Hexagon is extended to have several levels. Modules within it develop microgravity and vacuum manufacturing.</p>
-  <details>
+  <details id="spaceTug">
     <summary><h5>Space Tug and Space Debris Cleanup Services</h5></summary>
     <p>The Pod ships have already occasionally been doing extra missions between runs to the Moon. They have delivered satellites to GEO and removed old satellites from the graveyard orbit above it, and deorbited a number of the largest pieces of space debris, lowering risk of collisions in orbit. However, the Pod ships are not made for this. After a while it makes sense to build specialized spacecraft for these tasks, ones without the Pod ships' giant engines and great length, with tools adapted to their tasks.</p>
     <p>The amount of fuel the EESS can now supply allows it to host a space tug. The tug hauls satellites meant for other orbits from the station to where they are going. Then the tug returns and refuels for more work. It can haul 2 tons to GEO.</p>
     <p>A small fleet of debris cleaners is also set up. They have VASIMR drives so they can do more before needing refueling and last a long time. They continue to hunt down the large pieces of debris and set them up for deorbit. They attach large balloons to the debris and inflate them before moving on. The balloons vastly increase the atmospheric drag on the debris, which causes them to slow and thus sink. Sometimes they move them into a lower orbit first, where there is more drag to do the job.</p>
   </details>
-  <details>
+  <details id="drainVanAllen">
     <summary>Draining the Inner Van Allen Belt and Changing Station Inclination</summary>
     <p>The EESS orbits directly above the equator in order to avoid the <a href="https://en.wikipedia.org/wiki/South_Atlantic_Anomaly">South Atlantic Anomaly</a>. To make the station easier to launch to, and a better platform for Earth observation, it is decided to incline its orbit to 30&deg;. In order to prevent radiation from the Anomaly then greatly increasing the radiation dose on the EESS, a decision is taken. Drain the belt.</p>
     <p>This was initially proposed by Russian physicist <a href="https://en.wikipedia.org/wiki/Valentin_Danilov">Valentin Danilov</a>. The concept was further developed by Robert Hoyt and Robert Forward into the <a href="http://www.tethers.com/HiVOLT.html">HiVOLT system</a>. It uses a set of conductive tethers anchored to satellites orbiting in the belt, to bend the trajectories of charged particles such that they escape it and leave. Their analysis showed an initial system of 5 satellites with tethers 100 km long would reduce the ionizing particles in the belt to less than 1% of the current flux within two months. A system like this is deployed, and further similar tethers added. In two years the belt becomes almost indistinguishable from surrounding space. </p>
